@@ -86,3 +86,6 @@ jsonrpc = localhost:8000
 
 # Default database language code
 # language = en_US
+
+# Timezone of the server
+# timezone = False
