@@ -1,3 +1,4 @@
+* Allow to customize server timezone
 * Add richtext widget for WYSIWYG editor
 * Add support of fields.Time
 * Replace nested view by reference id
